--- a/bootstrap.css
+++ b/bootstrap.css
@@ -1116,7 +1116,7 @@ pre code {
     width: 33.33333333%;
   }
   .col-md-3 {
-    width: 25%;
+    width: auto;
   }
   .col-md-2 {
     width: 16.66666667%;
@@ -3031,6 +3031,12 @@ input[type="button"].btn-block {
   right: 0;
   left: auto;
 }
+.dropdown-menu-nav{
+  display: none;
+}
+#menu2 {
+  display: none;
+}
 .dropdown-menu .divider {
   height: 1px;
   margin: 9px 0;
@@ -4763,6 +4769,7 @@ a.list-group-item-danger.active:focus {
 }
 .panel-body {
   padding: 15px;
+  width: 330px;
 }
 .panel-heading {
   padding: 10px 15px;
@@ -4783,9 +4790,11 @@ a.list-group-item-danger.active:focus {
   color: inherit;
 }
 .panel-footer {
-  padding: 10px 15px;
+  width: 100%;
+  text-align: center;
+  position: absolute;
   background-color: #f5f5f5;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #dddddd;
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
 }
@@ -4952,11 +4961,13 @@ a.list-group-item-danger.active:focus {
 }
 .panel-default {
   border-color: #ddd;
+  width: 330px;
 }
 .panel-default > .panel-heading {
   color: #333;
   background-color: #f5f5f5;
   border-color: #ddd;
+  width: 330px;
 }
 .panel-default > .panel-heading + .panel-collapse .panel-body {
   border-top-color: #ddd;
